# dockerfile-tools

./: Cargo.toml  manifest
.github/workflows/: ci.yml
crates/dockerfile_ast/: Cargo.toml
crates/dockerfile_ast/src/: lib.rs  tests.rs
crates/dockerfile_diagnostics/: Cargo.toml
crates/dockerfile_diagnostics/src/: lib.rs
crates/dockerfile_lexer/: Cargo.toml
crates/dockerfile_lexer/src/: lib.rs  tests.rs
crates/dockerfile_lexer/src/snapshots/: dockerfile_lexer__tests__snapshot_quoted_strings_and_env.snap  dockerfile_lexer__tests__snapshot_simple_dockerfile.snap  dockerfile_lexer__tests__snapshot_with_continuations_and_comments.snap
crates/dockerfile_parser/: Cargo.toml
crates/dockerfile_parser/src/: directive.rs  lib.rs  parser.rs  tests.rs
crates/dockerfile_parser/src/snapshots/: dockerfile_parser__tests__snapshot_env_label_arg.snap  dockerfile_parser__tests__snapshot_minimal_dockerfile.snap  dockerfile_parser__tests__snapshot_multistage_with_directives.snap  dockerfile_parser__tests__snapshot_run_with_continuations.snap  dockerfile_parser__tests__snapshot_unknown_instruction_diagnostic.snap
crates/dockerfile_syntax/: Cargo.toml
crates/dockerfile_syntax/src/: kind.rs  lib.rs
