[workspace]
resolver = "3"
members = [
    "crates/dockerfile_ast",
    "crates/dockerfile_diagnostics",
    "crates/dockerfile_lexer",
    "crates/dockerfile_parser",
    "crates/dockerfile_syntax",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/dockerfile-tools"

[workspace.dependencies]
# external
rowan = "0.16"
text-size = "1.1"
thiserror = "2.0"
insta = "1.43"

# internal
dockerfile_ast = { path = "crates/dockerfile_ast" }
dockerfile_diagnostics = { path = "crates/dockerfile_diagnostics" }
dockerfile_lexer = { path = "crates/dockerfile_lexer" }
dockerfile_parser = { path = "crates/dockerfile_parser" }
dockerfile_syntax = { path = "crates/dockerfile_syntax" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
