[package]
name = "dockerfile_ast"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dockerfile_syntax.workspace = true
rowan.workspace = true
text-size.workspace = true

[dev-dependencies]
dockerfile_parser.workspace = true
insta.workspace = true

[lints]
workspace = true
